[gd_scene load_steps=3 format=3 uid="uid://lgs3klxru3sc"]

[ext_resource type="Script" uid="uid://sxmnbmyni0es" path="res://nodes/playable-character/components/playable-character-range/playable_character_range.gd" id="1_5qes6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_rylgj"]
radius = 25.0

[node name="PlayableCharacterRange" type="Area3D"]
collision_layer = 128
collision_mask = 256
script = ExtResource("1_5qes6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_rylgj")
debug_color = Color(0, 1, 0, 0.501961)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
